@@ -100,7 +100,8 @@ sub delete_group {
 sub delete_empty_groups {
     my $self = shift;
 
-    $self->delete_group( grep { !@{ $self->changes( $_ ) } } $self->groups );
+    $self->delete_group($_) 
+        for grep { !@{ $self->changes( $_ ) } } $self->groups;
 }
 
 sub serialize {
